[gd_scene load_steps=2 format=3 uid="uid://dm7x3yhk5vpbr"]

[ext_resource type="Script" path="res://src/ui/evidence_detail_popup.gd" id="1_popup"]

[node name="EvidenceDetailPopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_popup")

[node name="Dimmer" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="PanelContainer" parent="CenterContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 350)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="CenterContainer/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="TitleLabel" type="Label" parent="CenterContainer/Panel/MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Evidence Name"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/Panel/MarginContainer/VBox"]
layout_mode = 2

[node name="TypeLabel" type="Label" parent="CenterContainer/Panel/MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Category: Equipment-Derived"

[node name="TrustLabel" type="Label" parent="CenterContainer/Panel/MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Trust: High Trust
Shared display - difficult to lie about"
autowrap_mode = 2

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/Panel/MarginContainer/VBox"]
layout_mode = 2

[node name="CollectorLabel" type="Label" parent="CenterContainer/Panel/MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Collected by: Player 1"

[node name="TimestampLabel" type="Label" parent="CenterContainer/Panel/MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Time: 02:45"

[node name="LocationLabel" type="Label" parent="CenterContainer/Panel/MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Location: (10, 0, 5)"

[node name="QualityLabel" type="Label" parent="CenterContainer/Panel/MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Quality: Strong"

[node name="VerificationLabel" type="Label" parent="CenterContainer/Panel/MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Status: Verified
Corroborated by another player"
autowrap_mode = 2

[node name="ConflictContainer" type="VBoxContainer" parent="CenterContainer/Panel/MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 4

[node name="ConflictHeader" type="Label" parent="CenterContainer/Panel/MarginContainer/VBox/ConflictContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.5, 0, 1)
theme_override_font_sizes/font_size = 14
text = "⚠️ CONFLICT DETECTED"

[node name="ConflictLabel" type="Label" parent="CenterContainer/Panel/MarginContainer/VBox/ConflictContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.7, 0.4, 1)
text = "Conflict description here"
autowrap_mode = 2

[node name="Spacer" type="Control" parent="CenterContainer/Panel/MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="CloseButton" type="Button" parent="CenterContainer/Panel/MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Close"
